--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
     <title>Team Sleepy</title>
 </head>
 <body>
-    
+    <div class="continer">
+        <div class="jumbotron teamname">Team Sleepy</div>
+        <div class="h2">Team Motto</div>
+        <div class="row josh">
+            <div class="col-lg-6">Josh</div>
+        </div>
+        <div class="row sam">
+            <div class="col-lg-6">Sam</div>
+        </div>
+        <div class="row joe">
+            <div class="col-lg-6">Joe</div>
+        </div>
+
+
+
+    </div>
 
 
 
