--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="continer">
-        <div class="jumbotron teamname">Team Sleepy</div>
+        <div class="jumbotron teamname"><h1>Team Sleepy</h1></div>
         <div class="h2">Team Motto</div>
         <div class="row josh">
             <div class="col-lg-6">Josh</div>
