--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Team Sleepy</title>
 </head>
 <body>
+    <h1>Master Branch</h1>
+    <h2>Develop Branch</h2>
+    <h3>Josh Branch</h3>
     <div class="continer">
         <div class="jumbotron teamname"><h1>Team Sleepy</h1></div>
         <div class="h2">Team Motto</div>
