--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Team Sleepy</title>
 </head>
 <body>
+    <h1>Master Branch</h1>
     <div class="continer">
         <div class="jumbotron teamname">Team Sleepy</div>
         <div class="h2">Team Motto</div>
