--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div class="continer">
+        <h1>Master Branch</h1>
+        <h2>Develop Branch</h2>
         <div class="jumbotron teamname"><h1>Team Sleepy</h1></div>
         <div class="h2">Team Motto</div>
         <div class="row josh">
