--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 </head>
 <body>
     <div class="continer">
+        <h1>Master Branch</h1>
+        <h2>Develop Branch</h2>
         <div class="jumbotron teamname"><h1>Team Sleepy</h1></div>
-        <div class="h2">Team Motto</div>
+        <div class="h2">We Snooze. You Lose. GG.</div>
         <div class="row josh">
             <div class="col-lg-6">Josh</div>
         </div>
-        <div class="row sam">
-            <div class="col-lg-6">Sam</div>
+        <div class="rowsam">
+            <div class="col-lg-6">
+                <p class = "paragraph sam"> Hi my name is Sam and I am a part of Team Sleepy. Zzzzz. <a href="https://www.youtube.com/watch?v=rGeKY6_5Egg" target="_blank"> I love walks </a>, Anime, Don't like CSS or Html (but I do enjoy C#), and enjoy video games and other nerdy things like that. When I'm not being trolled into a hate fueled rage by trolls in League of Legends or being killed AGAIN in <a href="https://store.steampowered.com/app/945360/Among_Us/" target="_blank">Among Us </a>. I can be found here coding in my Software Development class at <a href="https://elevenfifty.org/" target="_blank"> Eleven Fifty Academy!</a></p>
+            </div>
         </div>
         <div class="row joe">
             <div class="col-lg-6">Joe</div>
