--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="continer">
-        <div class="jumbotron teamname"><h1>Team Sleepy</h1></div>
+        <div class="jumbotron teamname">Team Sleepy</div>
         <div class="h2">Team Motto</div>
         <div class="row josh">
             <div class="col-lg-6">Josh</div>
@@ -20,6 +20,11 @@
         </div>
         <div class="row joe">
             <div class="col-lg-6">Joe</div>
+            <ul style="list-style: none;">
+                <li>Joseph Jurney</li>
+                <li>SoftWare Development</li>
+                <li><a href="https://pixabay.com/images/search/cat/"></a>I love cats!</li>
+            </ul>
         </div>
 
 
