--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="assets/sleepy.png" class="sleepy-img img-fluid">
             <h2>You snooze. We Lose. <span style="text-shadow: 1px 1px 4px darkblue; font-size: 10px;">ZZzz</span></h2>
         </div>
-        <div class="row josh">
+        <div class="row josh" style="background-color:cyan;">
             <div class="col-6">
                 <ul style="list-style: none;">
                     <li>Name: Josh Hambright</li>
