--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2 style="text-align:right;">You snooze. We Lose. <span style="text-shadow: 1px 1px 4px darkblue; font-size: 10px;">ZZzz</span></h2>
         </div>
         <div class="row josh" style="background-color:cyan; text-align:center;">
-            <div class="col-6">
+            <div class="col-lg-6">
                 <ul style="list-style: none;">
                     <li>Name: Josh Hambright</li>
                     <li>Software Developer</li>
