--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 
 <body>
-    <div class="continer-fluid">
+    <div class="continer-fluid" style="max-width: 600px; margin-right:auto; margin-left:auto;">
         <div class="jumbotron teamname">
             <h1>Team Sleepy</h1>
             <img src="assets/sleepy.png" class="sleepy-img img-fluid">
-            <h2 style="text-align:right;">You snooze. We Lose. <span style="text-shadow: 1px 1px 4px darkblue; font-size: 10px;">ZZzz</span></h2>
+            <h2 style="text-align:right;">You snooze. We Lose. <span
+                    style="text-shadow: 1px 1px 4px darkblue; font-size: 10px;">ZZzz</span></h2>
         </div>
         <div class="row josh" style="background-color:cyan; text-align:center;">
             <div class="col-lg-6">
@@ -29,16 +30,23 @@
         </div>
         <div class="rowsam">
             <div class="col-lg-6">
-                <p class = "paragraph sam"> Hi my name is Sam and I am a part of Team Sleepy. Zzzzz. <a href="https://www.youtube.com/watch?v=rGeKY6_5Egg" target="_blank"> I love walks </a>, Anime, Don't like CSS or Html (but I do enjoy C#), and enjoy video games and other nerdy things like that. When I'm not being trolled into a hate fueled rage by trolls in League of Legends or being killed AGAIN in <a href="https://store.steampowered.com/app/945360/Among_Us/" target="_blank">Among Us </a>. I can be found here coding in my Software Development class at <a href="https://elevenfifty.org/" target="_blank"> Eleven Fifty Academy!</a></p>
+                <p class="paragraph sam"> Hi my name is Sam and I am a part of Team Sleepy. Zzzzz. <a
+                        href="https://www.youtube.com/watch?v=rGeKY6_5Egg" target="_blank"> I love walks </a>, Anime,
+                    Don't like CSS or Html (but I do enjoy C#), and enjoy video games and other nerdy things like that.
+                    When I'm not being trolled into a hate fueled rage by trolls in League of Legends or being killed
+                    AGAIN in <a href="https://store.steampowered.com/app/945360/Among_Us/" target="_blank">Among Us
+                    </a>. I can be found here coding in my Software Development class at <a
+                        href="https://elevenfifty.org/" target="_blank"> Eleven Fifty Academy!</a></p>
             </div>
         </div>
         <div class="row joe">
-            <div class="col-lg-6">Joe</div>
-            <ul style="list-style: none;">
-                <li>Joseph Jurney</li>
-                <li>SoftWare Development</li>
-                <li><a href="https://pixabay.com/images/search/cat/"></a>I love cats!</li>
-            </ul>
+            <div class="col-lg-6">Joe
+                <ul style="list-style: none;">
+                    <li>Joseph Jurney</li>
+                    <li>SoftWare Development</li>
+                    <li><a href="https://pixabay.com/images/search/cat/"></a>I love cats!</li>
+                </ul>
+            </div>
         </div>
 
 
