--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="continer-fluid" style="max-width: 600px; margin-right:auto; margin-left:auto;">
+    <div class="continer-fluid" style="max-width: 800px; margin-right:auto; margin-left:auto;">
         <div class="jumbotron teamname">
             <h1>Team Sleepy</h1>
             <img src="assets/sleepy.png" class="sleepy-img img-fluid">
@@ -28,7 +28,7 @@
                 </ul>
             </div>
         </div>
-        <div class="rowsam">
+        <div class="row rowsam">
             <div class="col-lg-6">
                 <p class="paragraph sam"> Hi my name is Sam and I am a part of Team Sleepy. Zzzzz. <a
                         href="https://www.youtube.com/watch?v=rGeKY6_5Egg" target="_blank"> I love walks </a>, Anime,
