--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         href="https://elevenfifty.org/" target="_blank"> Eleven Fifty Academy!</a></p>
             </div>
         </div>
-        <div class="row joe">
+        <div class="row rowjoe">
             <div class="col-lg-6">Joe
                 <ul style="list-style: none;">
                     <li>Joseph Jurney</li>
