--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     style="text-shadow: 1px 1px 4px darkblue; font-size: 10px;">ZZzz</span></h2>
         </div>
         <div class="row josh" style="background-color:cyan; text-align:center;">
-            <div class="col-lg-6">
+            <div class="col-lg-6" style="text-align:center;" >
                 <ul style="list-style: none;">
                     <li>Name: Josh Hambright</li>
                     <li>Software Developer</li>
