--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="jumbotron teamname">
             <h1>Team Sleepy</h1>
             <img src="assets/sleepy.png" class="sleepy-img img-fluid">
-            <h2 style="text-align:right;">You snooze. We Lose. <span
-                    style="text-shadow: 1px 1px 4px darkblue; font-size: 10px;">ZZzz</span></h2>
+            <h2 style="text-align:right;">You snooze. We Lose. <span class="zzz"
+                    style=>ZZzz</span></h2>
         </div>
         <div class="row josh" style="background-color:cyan; text-align:center;">
             <div class="col-lg-6" style="text-align:center;" >
